styles_dark.scss
/*-- scss:defaults --*/

// Import Google fonts
@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=Forum&family=Quicksand:wght@300..700&display=swap');

// Colors
$deep-charcoal: #1C1F1E;
$dark-slate: #252928;
$muted-teal: #4E9E94;
$sage-mist: #7AAF9F;
$off-white: #E8E8E4;
$cool-grey: #9A9E9C;
$dark-stone: #353A38;

// Base document colors
$navbar-bg: $dark-slate;     // navbar
$navbar-fg: $off-white;      // navbar foreground elements
$body-bg: $deep-charcoal;    // page background
$body-color: $off-white;     // page text
$link-color: $muted-teal;    // links

.navbar-logo {
  max-height: 80px !important;  // change this to whatever size you want
  width: auto;
  padding-right: 4px;
}

// Project cards
.card {
  background-color: $dark-slate;
  color: $off-white;
  max-width: 700px;
  margin-left: auto;
  margin-right: auto;
}

// Project buttons
.btn-primary {
  background-color: $muted-teal !important;
  border-color: $muted-teal !important;
  color: $deep-charcoal !important;
  border-radius: 6px;
  padding: 8px 18px;
  text-decoration: none;

  &:hover {
    background-color: $sage-mist !important;
    border-color: $sage-mist !important;
  }
}

// header colours 
h1, h2, h3, h4, h5, h6,
.title,
#quarto-document-content h1,
#quarto-document-content h2,
#quarto-document-content h3 {
  color: #E8E8E4 !important;
}

